Updating git ignore and list css file location

--- a/.gitignore
+++ b/.gitignore
@@ -259,3 +259,5 @@ modules.xml
 .ionide
 
 # End of https://www.toptal.com/developers/gitignore/api/visualstudiocode,django,pycharm+all
+
+activateEnvironment.sh
